<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:autofillHints="username"
        android:minHeight="48dp"
        android:padding="12dp"
        android:backgroundTint="@color/textLight"
        android:textColor="@color/textLight"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:minHeight="48dp"
        android:padding="12dp"
        android:backgroundTint="@color/textLight"
        android:textColor="@color/textLight"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        android:textColor="@color/textLight"/>
</LinearLayout>

